--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "malendar",
-  "version": "08.07.2020.1",
+  "version": "15.07.2020.1",
   "homepage": "http://shrmnn.github.io/malendar",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-month-picker": "^2.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
